fix: do not fail to detect development version of local build of the server code

--- a/aspx/wwwroot/RAWebServer.csproj
+++ b/aspx/wwwroot/RAWebServer.csproj
@@ -129,4 +129,13 @@
     </Content>
   </ItemGroup>
 
+  <!-- if not release, generate an indicator file -->
+  <Target Name="GenerateDevelopmentIndicatorFile" AfterTargets="Build"
+    Condition="'$(Configuration)' != 'Release'">
+    <WriteLinesToFile
+      File="$(OutputPath)DEVELOPMENT"
+      Lines="This is a development build of RAWeb Server."
+      Overwrite="true" />
+  </Target>
+
 </Project>
