refactor: move `RAWebServer.Utilities.ImageUtilities` to `RAWeb.Server.Utilities.ImageUtilities`

--- a/dotnet/RAWeb.Server.Utilities/RAWeb.Server.Utilities.csproj
+++ b/dotnet/RAWeb.Server.Utilities/RAWeb.Server.Utilities.csproj
@@ -20,6 +20,14 @@
     <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
   </PropertyGroup>
 
+  <ItemGroup Condition="'$(TargetFramework)' == 'net462'">
+    <Reference Include="System.Net.Http" />
+  </ItemGroup>
+
+  <ItemGroup Condition="'$(TargetFramework)' == 'net8.0-windows'">
+    <PackageReference Include="System.Net.Http" Version="4.3.4" />
+  </ItemGroup>
+
   <ItemGroup>
     <PackageReference Include="PolySharp" Version="1.15.0">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
