refactor: move `RAWebServer.Cache.UserCacheDatabaseHelper` to `RAWeb.Server.Utilities.UserCacheDatabaseHelper`

--- a/dotnet/RAWeb.Server.Utilities/RAWeb.Server.Utilities.csproj
+++ b/dotnet/RAWeb.Server.Utilities/RAWeb.Server.Utilities.csproj
@@ -33,6 +33,16 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <Reference Include="System.Data.SQLite">
+      <HintPath>ext\System.Data.SQLite.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Data.SQLite.Linq">
+      <HintPath>ext\System.Data.SQLite.Linq.dll</HintPath>
+    </Reference>
+    <Content Include="ext\SQLite.Interop.dll">
+      <Link>SQLite.Interop.dll</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
