refactor: move `WorkspaceBuilder`, `RegistryUtilities`, and `FileSystemUtilities`

--- a/dotnet/RAWeb.Server.Utilities/RAWeb.Server.Utilities.csproj
+++ b/dotnet/RAWeb.Server.Utilities/RAWeb.Server.Utilities.csproj
@@ -50,4 +50,8 @@
     </Content>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\RAWeb.Server.Management\RAWeb.Server.Management.csproj" />
+  </ItemGroup>
+
 </Project>
