--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -129,7 +129,7 @@ jobs:
         uses: actions/setup-dotnet@v5
         with:
           dotnet-version: "8.0.x"
-          cache: true
+          cache: false
 
       - name: Restore .NET solution
         run: dotnet restore RAWeb.sln --locked-mode
