--- a/dotnet/RAWeb.Server.Utilities/RAWeb.Server.Utilities.csproj
+++ b/dotnet/RAWeb.Server.Utilities/RAWeb.Server.Utilities.csproj
@@ -28,6 +28,7 @@
   </ItemGroup>
 
   <ItemGroup Condition="'$(TargetFramework)' == 'net8.0-windows'">
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.3.0" />
     <PackageReference Include="System.DirectoryServices" Version="9.0.10" />
     <PackageReference Include="System.DirectoryServices.AccountManagement" Version="9.0.10" />
     <PackageReference Include="System.Drawing.Common" Version="9.0.10" />
