chore: move `aspx/wwwroot/` to `dotnet/RAWebServer/`

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
-aspx/wwwroot/bin/** linguist-vendored
-frontend/wwwroot/bin/** linguist-vendored
+dotnet/RAWebServer/ext/** linguist-vendored
+dotnet/RAWeb.Server.Utilities/ext/** linguist-vendored
