--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -74,7 +74,7 @@ jobs:
           CLEAN_VERSION="${{ steps.clean_version.outputs.CLEAN_VERSION }}"
 
           CSPROJ_FILES=(
-            "aspx/wwwroot/RAWebServer.csproj"
+            "dotnet/RAWebServer/RAWebServer.csproj"
             "dotnet/RAWeb.Server.Management/RAWeb.Server.Management.csproj"
             "dotnet/RAWeb.Server.Management.ServiceHost/RAWeb.Server.Management.ServiceHost.csproj"
           )
@@ -90,9 +90,9 @@ jobs:
             fi
           done
 
-      - name: Move repository setup.ps1 to aspx/wwwroot so it is included in the release archive
+      - name: Move repository setup.ps1 to dotnet/RAWebServer so it is included in the release archive
         run: |
-          mv setup.ps1 aspx/wwwroot/setup.ps1
+          mv setup.ps1 dotnet/RAWebServer/setup.ps1
 
       - name: Set up pnpm
         uses: pnpm/action-setup@v4
@@ -119,7 +119,7 @@ jobs:
         uses: thedoctor0/zip-release@0.7.5
         with:
           type: "zip"
-          directory: aspx/wwwroot/
+          directory: dotnet/RAWebServer/
           filename: "../../raweb_${{ steps.version.outputs.version }}__no_docs.zip"
 
       - name: Build the frontend
@@ -139,15 +139,15 @@ jobs:
 
       - name: Replace App_Code and bin directories with build output
         run: |
-          rm -rf aspx/wwwroot/App_Code
-          rm -rf aspx/wwwroot/bin
-          cp -r aspx/wwwroot/build/bin aspx/wwwroot/bin
+          rm -rf dotnet/RAWebServer/App_Code
+          rm -rf dotnet/RAWebServer/bin
+          cp -r dotnet/RAWebServer/build/bin dotnet/RAWebServer/bin
 
       - name: Generate archive
         uses: thedoctor0/zip-release@0.7.5
         with:
           type: "zip"
-          directory: aspx/wwwroot/
+          directory: dotnet/RAWebServer/
           filename: "../../raweb_${{ steps.version.outputs.version }}.zip"
 
       - name: Write release install.ps1
@@ -169,10 +169,10 @@ jobs:
           # create a temporary directory and do everything there
           Set-Location (New-TemporaryDirectory)
 
-          # download the built version of RAWeb and extract to aspx\wwwroot (expected by the respository's install.ps1)
+          # download the built version of RAWeb and extract to dotnet\RAWebServer (expected by the respository's install.ps1)
           \$zipUrl = "https://github.com/${{ github.repository }}/releases/download/${{ steps.version.outputs.version }}/raweb_${{ steps.version.outputs.version }}.zip"
           \$zipPath = Join-Path \$pwd "raweb_${{ steps.version.outputs.version }}.zip"
-          \$extractPath = Join-Path \$pwd "aspx\wwwroot"
+          \$extractPath = Join-Path \$pwd "dotnet\RAWebServer"
           Write-Host Downloading...
           Write-Verbose "Downloading \$zipUrl to \$zipPath"
           Invoke-WebRequest -Uri \$zipUrl -OutFile \$zipPath
