--- a/dotnet/RAWebServer/RAWebServer.csproj
+++ b/dotnet/RAWebServer/RAWebServer.csproj
@@ -39,21 +39,21 @@
     <Reference Include="System.Net" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Net.Http.Formatting">
-      <HintPath>bin\System.Net.Http.Formatting.dll</HintPath>
+      <HintPath>ext\System.Net.Http.Formatting.dll</HintPath>
     </Reference>
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Http">
-      <HintPath>bin\System.Web.Http.dll</HintPath>
+      <HintPath>ext\System.Web.Http.dll</HintPath>
     </Reference>
     <Reference Include="System.Web.Http.WebHost">
-      <HintPath>bin\System.Web.Http.WebHost.dll</HintPath>
+      <HintPath>ext\System.Web.Http.WebHost.dll</HintPath>
     </Reference>
     <Reference Include="System.Xml" />
     <Reference Include="System.Web.Extensions" />
     <Reference Include="System.DirectoryServices" />
     <Reference Include="System.DirectoryServices.AccountManagement" />
     <Reference Include="Newtonsoft.Json">
-      <HintPath>bin\Newtonsoft.Json.dll</HintPath>
+      <HintPath>ext\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.ServiceModel" />
