--- a/dotnet/RAWeb.Server.Management/RAWeb.Server.Management.csproj
+++ b/dotnet/RAWeb.Server.Management/RAWeb.Server.Management.csproj
@@ -18,6 +18,7 @@
     <FileVersion>1.0.0.0</FileVersion>
     <Company>RAWeb</Company>
     <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
+    <NoWarn>$(NoWarn);CS7035</NoWarn>
   </PropertyGroup>
 
   <ItemGroup Condition="'$(TargetFramework)' == 'net462'">
@@ -32,6 +33,7 @@
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
     <PackageReference Include="System.DirectoryServices" Version="9.0.10" />
     <PackageReference Include="System.DirectoryServices.AccountManagement" Version="9.0.10" />
+    <PackageReference Include="System.Drawing.Common" Version="9.0.10" />
   </ItemGroup>
 
   <ItemGroup>
