--- a/dotnet/RAWeb.Server.Utilities/RAWeb.Server.Utilities.csproj
+++ b/dotnet/RAWeb.Server.Utilities/RAWeb.Server.Utilities.csproj
@@ -18,9 +18,11 @@
     <FileVersion>1.0.0.0</FileVersion>
     <Company>RAWeb</Company>
     <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
+    <NoWarn>$(NoWarn);CS7035</NoWarn>
   </PropertyGroup>
 
   <ItemGroup Condition="'$(TargetFramework)' == 'net462'">
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.DirectoryServices" />
     <Reference Include="System.DirectoryServices.AccountManagement" />
     <Reference Include="System.Net.Http" />
