--- a/dotnet/RAWebServer/RAWebServer.csproj
+++ b/dotnet/RAWebServer/RAWebServer.csproj
@@ -17,6 +17,7 @@
     <Version>1.0.0.0</Version>
     <FileVersion>1.0.0.0</FileVersion>
     <Company>RAWeb</Company>
+    <NoWarn>$(NoWarn);CS7035</NoWarn>
   </PropertyGroup>
 
   <PropertyGroup>
