fix(docs): always scroll to and highlight the target element based on the hash (usually section headers)

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -19,7 +19,7 @@
       "$dialogs/*": ["./lib/dialogs/*"]
     },
     "allowJs": true,
-    "checkJs": false,
+    "checkJs": true,
     "skipLibCheck": true,
     "strict": true,
     "noImplicitAny": true,
