feat: add Duo Universal Prompt integration support

--- a/dotnet/RAWebServer/RAWebServer.csproj
+++ b/dotnet/RAWebServer/RAWebServer.csproj
@@ -27,8 +27,7 @@
 
   <!-- ensure that the frontend has been built  -->
   <Target Name="RunCustomBuild" BeforeTargets="Build">
-    <MSBuild Projects="..\..\frontend\build.proj" Targets="Build"
-      Condition="!Exists('lib\build.timestamp')" />
+    <MSBuild Projects="..\..\frontend\build.proj" Targets="Build" Condition="!Exists('lib\build.timestamp')" />
   </Target>
 
   <ItemGroup>
@@ -62,8 +61,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\dotnet\RAWeb.Server.Management\RAWeb.Server.Management.csproj" />
-    <ProjectReference
-      Include="..\..\dotnet\RAWeb.Server.Management.ServiceHost\RAWeb.Server.Management.ServiceHost.csproj" />
+    <ProjectReference Include="..\..\dotnet\RAWeb.Server.Management.ServiceHost\RAWeb.Server.Management.ServiceHost.csproj" />
     <ProjectReference Include="..\..\dotnet\RAWeb.Server.Utilities\RAWeb.Server.Utilities.csproj" />
   </ItemGroup>
 
@@ -74,30 +72,19 @@
     </PropertyGroup>
 
     <!-- ensure the target directories exist -->
-    <MakeDir Directories="$(ParentOfOutput)App_Data"
-      Condition="!Exists('$(ParentOfOutput)App_Data')" />
+    <MakeDir Directories="$(ParentOfOutput)App_Data" Condition="!Exists('$(ParentOfOutput)App_Data')" />
 
     <!-- copy Web.config and Global.asax -->
-    <Copy
-      SourceFiles="Web.config;Global.asax"
-      DestinationFolder="$(ParentOfOutput)"
-      SkipUnchangedFiles="true" />
+    <Copy SourceFiles="Web.config;Global.asax" DestinationFolder="$(ParentOfOutput)" SkipUnchangedFiles="true" />
 
     <!-- copy appSettings.config only if missing -->
-    <Copy
-      SourceFiles="App_Data\appSettings.config"
-      DestinationFiles="$(ParentOfOutput)App_Data\appSettings.config"
-      Condition="!Exists('$(ParentOfOutput)App_Data\appSettings.config')" />
+    <Copy SourceFiles="App_Data\appSettings.config" DestinationFiles="$(ParentOfOutput)App_Data\appSettings.config" Condition="!Exists('$(ParentOfOutput)App_Data\appSettings.config')" />
 
-    <Copy
-      SourceFiles="../../frontend/lib/assets/default.ico; ../../frontend/lib/assets/remoteicon.png;../../frontend/lib/assets/wallpaper.png;../../frontend/lib/assets/wallpaper-dark.png;../../frontend/lib/assets/desktop-frame.png"
-      DestinationFolder="$(ParentOfOutput)\lib\assets\"
-      SkipUnchangedFiles="true" />
+    <Copy SourceFiles="../../frontend/lib/assets/default.ico; ../../frontend/lib/assets/remoteicon.png;../../frontend/lib/assets/wallpaper.png;../../frontend/lib/assets/wallpaper-dark.png;../../frontend/lib/assets/desktop-frame.png" DestinationFolder="$(ParentOfOutput)\lib\assets\" SkipUnchangedFiles="true" />
   </Target>
 
   <ItemGroup>
-    <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools"
-      Version="2.0.0" />
+    <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -116,13 +103,13 @@
     </Content>
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="6.0.0" />
+  </ItemGroup>
+
   <!-- if not release, generate an indicator file -->
-  <Target Name="GenerateDevelopmentIndicatorFile" AfterTargets="Build"
-    Condition="'$(Configuration)' != 'Release'">
-    <WriteLinesToFile
-      File="$(OutputPath)DEVELOPMENT"
-      Lines="This is a development build of RAWeb Server."
-      Overwrite="true" />
+  <Target Name="GenerateDevelopmentIndicatorFile" AfterTargets="Build" Condition="'$(Configuration)' != 'Release'">
+    <WriteLinesToFile File="$(OutputPath)DEVELOPMENT" Lines="This is a development build of RAWeb Server." Overwrite="true" />
   </Target>
 
 </Project>
