--- a/dotnet/RAWebServer/Web.config
+++ b/dotnet/RAWebServer/Web.config
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <configuration>
    <appSettings configSource="App_Data\appSettings.config" />
+
    <system.web>
       <compilation defaultLanguage="C#" targetFramework="4.6.2">
          <assemblies>
@@ -13,6 +14,7 @@
       <customErrors mode="Off" />
       <globalization culture="auto" uiCulture="auto" />
    </system.web>
+
    <system.webServer>
       <staticContent>
          <mimeMap fileExtension=".vue" mimeType="application/javascript" />
@@ -46,4 +48,14 @@
          <add name="AuthUserStaleWhileRevalidate" type="RAWebServer.Modules.AuthUserStaleWhileRevalidate" preCondition="managedHandler" />
       </modules>
    </system.webServer>
+
+   <runtime>
+      <AppContextSwitchOverrides value="Switch.System.Net.DontEnableSystemDefaultTlsVersions=false;Switch.System.Net.DontEnableTls12=false" />
+      <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+         <dependentAssembly>
+            <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+            <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+         </dependentAssembly>
+      </assemblyBinding>
+   </runtime>
 </configuration>
