--- a/dotnet/RAWebServer/Web.config
+++ b/dotnet/RAWebServer/Web.config
@@ -3,6 +3,7 @@
    <appSettings configSource="App_Data\appSettings.config" />
 
    <system.web>
+      <httpRuntime targetFramework="4.6.2" />
       <compilation defaultLanguage="C#" targetFramework="4.6.2">
          <assemblies>
             <add assembly="System.DirectoryServices, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
@@ -25,6 +26,7 @@
       </staticContent>
       <handlers>
          <add name="AllowAllRequestsToReachApi" path="api/*" verb="*" type="System.Web.Handlers.TransferRequestHandler" />
+         <add name="GuacdTunnel" path="guacd-tunnel" verb="*" type="RAWebServer.Handlers.GuacdTunnel" resourceType="Unspecified" />
       </handlers>
       <caching>
          <profiles>
