--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@tanstack/vue-query": "^5.90.5",
     "devalue": "^5.3.2",
+    "dompurify": "^3.3.1",
     "front-matter": "^4.0.2",
     "i18next": "^25.2.1",
     "i18next-http-backend": "^3.0.2",
@@ -31,7 +32,9 @@
     "@types/node": "^22.15.17",
     "@vitejs/plugin-vue": "^5.2.3",
     "@xmldom/xmldom": "^0.8.11",
+    "i18next-fs-backend": "^2.6.1",
     "image-size": "^2.0.2",
+    "pagefind": "^1.4.0",
     "selfsigned": "^5.4.0",
     "typescript": "^5.8.3",
     "vite": "^6.4.1"
