--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@tanstack/vue-query": "^5.90.5",
     "@types/guacamole-common-js": "~1.5.5",
     "devalue": "^5.3.2",
+    "dompurify": "^3.3.1",
     "front-matter": "^4.0.2",
     "guacamole-common-js": "1.5.0",
     "i18next": "^25.2.1",
@@ -33,7 +34,9 @@
     "@types/node": "^22.15.17",
     "@vitejs/plugin-vue": "^5.2.3",
     "@xmldom/xmldom": "^0.8.11",
+    "i18next-fs-backend": "^2.6.1",
     "image-size": "^2.0.2",
+    "pagefind": "^1.4.0",
     "selfsigned": "^5.4.0",
     "typescript": "^5.8.3",
     "vite": "^6.4.1"
