--- a/.github/workflows/public.yaml
+++ b/.github/workflows/public.yaml
@@ -7,6 +7,7 @@ on:
       - "frontend/**"
       - "dotnet/**"
       - ".github/workflows/public.yaml"
+      - "setup.ps1"
 
   # for building frontend
   pull_request_target:
