--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -114,11 +114,6 @@ jobs:
             fi
           done
 
-      - name: Move repository setup.ps1 to dotnet/RAWebServer so it is included in the release archive
-        shell: bash
-        run: |
-          mv setup.ps1 dotnet/RAWebServer/setup.ps1
-
       - name: Set up pnpm
         uses: pnpm/action-setup@v4
         with:
@@ -166,6 +161,29 @@ jobs:
           rm -rf dotnet/RAWebServer/.vscode
           cp -r dotnet/RAWebServer/build/bin dotnet/RAWebServer/bin
           rm -rf dotnet/RAWebServer/build
+
+      - name: Move repository setup.ps1 to dotnet/RAWebServer so it is included in the release archive
+        shell: bash
+        run: |
+          mv setup.ps1 dotnet/RAWebServer/setup.ps1
+
+      # modify setup.ps1 to replace $source_dir = "dotnet\RAWebServer" with $source_dir = ""
+      # since the setup.ps1 is now in the same folder as the files to install
+      - name: Modify setup.ps1 for altered location
+        shell: bash
+        run: |
+          find='$source_dir = "dotnet\\RAWebServer"'
+          replace='$source_dir = ""'
+          file='dotnet/RAWebServer/setup.ps1'
+
+          sed -i "s|$find|$replace|g" "$file"
+
+      # make an empty frontend dir so setup.ps1 does not quit due to it
+      # not being available (it will not be used; the frontend is already built)
+      - name: Create empty frontend directory
+        shell: bash
+        run: |
+          mkdir -p dotnet/RAWebServer/frontend
 
       - name: Generate archive (no web connect) (no embedded docs)
         uses: thedoctor0/zip-release@0.7.5
@@ -216,13 +234,6 @@ jobs:
           directory: dotnet/RAWebServer/
           filename: "../../raweb_${{ steps.version.outputs.version }}__no_web_connect.zip"
 
-      - name: Generate archive
-        uses: thedoctor0/zip-release@0.7.5
-        with:
-          type: "zip"
-          directory: dotnet/RAWebServer/
-          filename: "../../raweb_${{ steps.version.outputs.version }}.zip"
-
       - name: Write release install.ps1
         shell: bash
         run: |
@@ -246,7 +257,7 @@ jobs:
           # download the built version of RAWeb and extract to dotnet\RAWebServer (expected by the respository's install.ps1)
           \$zipUrl = "https://github.com/${{ github.repository }}/releases/download/${{ steps.version.outputs.version }}/raweb_${{ steps.version.outputs.version }}.zip"
           \$zipPath = Join-Path \$pwd "raweb_${{ steps.version.outputs.version }}.zip"
-          \$extractPath = Join-Path \$pwd "dotnet\RAWebServer"
+          \$extractPath = $pwd
           Write-Host Downloading...
           Write-Verbose "Downloading \$zipUrl to \$zipPath"
           Invoke-WebRequest -Uri \$zipUrl -OutFile \$zipPath
@@ -256,18 +267,6 @@ jobs:
           Write-Verbose "Removing \$zipPath"
           Remove-Item -Path \$zipPath
           Write-Host Starting...
-
-          # move setup.ps1 to the current directory
-          \$setupPath = Join-Path \$extractPath "setup.ps1"
-          Write-Verbose "Moving \$setupPath to \$pwd"
-          Move-Item -Path \$setupPath -Destination (Join-Path \$pwd "setup.ps1")
-          Write-Verbose "Moving \$setupDepsPath to \$pwd"
-
-          # make an empty frontend dir so setup.ps1 does not quit due to it
-          # not being available (it will not be used; the frontend is already built)
-          \$frontendDirPath = Join-Path \$pwd "frontend"
-          Write-Verbose "Creating empty directory \$frontendDirPath"
-          New-Item -ItemType Directory -Force -Path \$frontendDirPath | Out-Null
 
           # run setup.ps1
           Write-Verbose "Running setup.ps1 using powershell.exe"
@@ -308,7 +307,10 @@ jobs:
             irm https://github.com/${{ github.repository }}/releases/download/${{ steps.version.outputs.version }}/install.ps1 | iex
             ```
 
-            3. Follow the prompts.
+            3. **Follow the prompts**.
+
+            4. **Install web client prerequisites.**\
+               If you plan to use the web client connection method, follow the instructions in our [web client prerequisites documentation](https://raweb.app/docs/web-client/prerequisites) to install and configure the required software.
 
             > [!IMPORTANT]
             > The installer will retrieve `raweb_${{ steps.version.outputs.version }}.zip` from the release and install it to `C:\inetpub\RAWeb`.
