--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -291,16 +291,16 @@ jobs:
           body: |
             ## Install this release
 
-            1. **Open PowerShell as an administrator**
+            1. **Open PowerShell as an administrator.**
                Press the Windows key + X, then select PowerShell (Administrator) or Terminal (Administrator).
 
-            2. **Copy and paste the code below, then press enter.**
+            2. **Copy and paste the code below, and then press enter.**
 
              ```
             irm https://github.com/${{ github.repository }}/releases/download/${{ steps.version.outputs.version }}/install.ps1 | iex
             ```
 
-            3. **Follow the prompts**.
+            3. **Follow the prompts.**
 
             4. **Install web client prerequisites.**\
                If you plan to use the web client connection method, follow the instructions in our [web client prerequisites documentation](https://raweb.app/docs/web-client/prerequisites) to install and configure the required software.
